src/sample-app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-voting
  labels:
    hostk8s.app: sample-voting
    hostk8s.component: voting-system
    hostk8s.tutorial: level-100-500
